Changed logging to info for reloadEPG

--- a/M3UToolsJPA/config.properties
+++ b/M3UToolsJPA/config.properties
@@ -1,6 +1,6 @@
 #
-#Wed Dec 28 21:34:59 GMT 2022
-fileWatcher.location=/home/jonathan/.xteve/data/xteve.xml
+#Thu Dec 29 12:27:09 GMT 2022
+fileWatcher.location=/home/jonathan/.xteve/data
 stream.channels=http\://line.maintv.live/get.php?username\=C45C8C&password\=6F3788&type\=m3u_plus&output\=mpegts
 fileName=/home/jonathan/git/M3UTools/M3UToolsJPA/config.properties
 fullM3U=/home/jonathan/videoDownloader/allChannels.m3u
