Changed TvgLogo to Lob field

--- a/M3UToolsJPA/config.properties
+++ b/M3UToolsJPA/config.properties
@@ -1,7 +1,7 @@
 #
-#Thu Dec 29 12:27:09 GMT 2022
+#Sun Jan 22 20:08:42 GMT 2023
 fileWatcher.location=/home/jonathan/.xteve/data
-stream.channels=http\://line.maintv.live/get.php?username\=C45C8C&password\=6F3788&type\=m3u_plus&output\=mpegts
+stream.channels=http\://line.mytv-ultra.com/get.php?username\=9CD702&password\=22C122&type\=m3u_plus&output\=mpegts
 fileName=/home/jonathan/git/M3UTools/M3UToolsJPA/config.properties
 fullM3U=/home/jonathan/videoDownloader/allChannels.m3u
 moviedb.searchPersonURL=https\://api.themoviedb.org/3/search/person
@@ -10,7 +10,7 @@ xteve.url=http\://localhost\:34400/api/
 xteve.installed=true
 emby.api=01f9cd6d610c499a82e5bc4a48401eec
 moviedb.apikey=56744a89f97f5119fe2a2306794d29a3
-channels=http\://line.maintv.live/get.php?username\=C45C8C&password\=6F3788&type\=m3u_plus&output\=mpegts
+channels=http\://line.mytv-ultra.com/get.php?username\=9CD702&password\=22C122&type\=m3u_plus&output\=mpegts
 downloadPath=/home/jonathan/M3UToolsJPA/
 epg.time.difference=+0100
 moviedb.discoverURL=https\://api.themoviedb.org/3/discover/movie
@@ -20,4 +20,4 @@ emby.installed=true
 filewatcher.pollingDuration=10000
 xteve.user=duckulaj
 moviedb.searchMovieURL=https\://api.themoviedb.org/3/movie
-stream.playlist=http\://line.maintv.live/xmltv.php?username\=C45C8C&password\=6F3788
+stream.playlist=http\://line.mytv-ultra.com/xmltv.php?username\=9CD702&password\=22C122
