--- a/M3UToolsJPA/.gitignore
+++ b/M3UToolsJPA/.gitignore
@@ -1,3 +1,10 @@
 /target/
 /M3UToolsJPA.log
 /m3uTools.mv.db
+/M3UToolsJPA.log.2023-01-15.0.gz
+/M3UToolsJPA.log.2023-01-16.0.gz
+/M3UToolsJPA.log.2023-01-18.0.gz
+/M3UToolsJPA.log.2023-01-19.0.gz
+/M3UToolsJPA.log.2023-01-20.0.gz
+/config.properties.bu
+/m3uTools.trace.db
