--- a/M3UToolsJPA/src/main/resources/application.properties
+++ b/M3UToolsJPA/src/main/resources/application.properties
@@ -12,5 +12,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-
+spring.jpa.properties.hibernate.jdbc.batch_size=30
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.generate_statistics=false
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.max-lifetime=1000
+spring.datasource.hikari.auto-commit=true
 
