--- a/M3UToolsJPA/config.properties
+++ b/M3UToolsJPA/config.properties
@@ -5,13 +5,13 @@ stream.channels=http\://line.mytv-ultra.com/get.php?username\=9CD702&password\=2
 fileName=/home/jonathan/git/M3UTools/M3UToolsJPA/config.properties
 fullM3U=/home/jonathan/videoDownloader/allChannels.m3u
 moviedb.searchPersonURL=https\://api.themoviedb.org/3/search/person
-epg.filename=/home/jonathan/.xteve/data/xteve.xml
+epg.filename=./M3UToolsJPA.xml
 xteve.url=http\://localhost\:34400/api/
 xteve.installed=true
 emby.api=01f9cd6d610c499a82e5bc4a48401eec
 moviedb.apikey=56744a89f97f5119fe2a2306794d29a3
 channels=http\://line.mytv-ultra.com/get.php?username\=9CD702&password\=22C122&type\=m3u_plus&output\=mpegts
-downloadPath=/home/jonathan/M3UToolsJPA/
+downloadPath=./
 epg.time.difference=+0100
 moviedb.discoverURL=https\://api.themoviedb.org/3/discover/movie
 emby.url=http\://192.168.0.110\:8096/emby/
