--- a/M3UToolsJPA/src/main/resources/config.properties
+++ b/M3UToolsJPA/src/main/resources/config.properties
@@ -1,22 +1,23 @@
-#store to properties file
-#Wed Nov 23 21:41:18 GMT 2022
-channels=http\://line.maintv.live/get.php?username\=C45C8C&password\=6F3788&type\=m3u_plus&output\=mpegts
-downloadPath=/home/jonathan/M3UToolsJPA/
-emby.api=01f9cd6d610c499a82e5bc4a48401eec
-emby.installed=true
-emby.url=http\://192.168.0.110\:8096/emby/
-epg.filename=/home/jonathan/.xteve/data/xteve.xml
-epg.time.difference=+0100
-fileWatcher.location=/home/jonathan/.xteve/data/xteve.xml
-filewatcher.pollingDuration=10000
+#
+#Thu Feb 23 14:14:23 GMT 2023
+fileWatcher.location=/home/jonathan/.xteve/data
+stream.channels=http\://line.mytv-ultra.com/get.php?username\=9CD702&password\=22C122&type\=m3u_plus&output\=mpegts
+fileName=/home/jonathan/git/M3UTools/M3UToolsJPA/config.properties
 fullM3U=/home/jonathan/videoDownloader/allChannels.m3u
-moviedb.apikey=56744a89f97f5119fe2a2306794d29a3
-moviedb.discoverURL=https\://api.themoviedb.org/3/discover/movie
-moviedb.searchMovieURL=https\://api.themoviedb.org/3/movie
 moviedb.searchPersonURL=https\://api.themoviedb.org/3/search/person
-moviedb.searchURL=https\://api.themoviedb.org/3/search/movie
-stream.channels=http\://line.maintv.live/get.php?username\=C45C8C&password\=6F3788&type\=m3u_plus&output\=mpegts
-stream.playlist=http\://line.maintv.live/xmltv.php?username\=C45C8C&password\=6F3788
-xteve.installed=true
+epg.filename=./M3UToolsJPA.xml
 xteve.url=http\://localhost\:34400/api/
+xteve.installed=true
+emby.api=01f9cd6d610c499a82e5bc4a48401eec
+moviedb.apikey=56744a89f97f5119fe2a2306794d29a3
+channels=http\://line.mytv-ultra.com/get.php?username\=9CD702&password\=22C122&type\=m3u_plus&output\=mpegts
+downloadPath=./
+epg.time.difference=+0100
+moviedb.discoverURL=https\://api.themoviedb.org/3/discover/movie
+emby.url=http\://192.168.0.110\:8096/emby/
+moviedb.searchURL=https\://api.themoviedb.org/3/search/movie
+emby.installed=true
+filewatcher.pollingDuration=10000
 xteve.user=duckulaj
+moviedb.searchMovieURL=https\://api.themoviedb.org/3/movie
+stream.playlist=http\://line.mytv-ultra.com/xmltv.php?username\=9CD702&password\=22C122
