--- a/M3UToolsJPA/config.properties
+++ b/M3UToolsJPA/config.properties
@@ -2,8 +2,8 @@
 #Thu Feb 23 14:14:23 GMT 2023
 fileWatcher.location=/home/jonathan/.xteve/data
 stream.channels=http\://line.mytv-ultra.com/get.php?username\=9CD702&password\=22C122&type\=m3u_plus&output\=mpegts
-fileName=/home/jonathan/git/M3UTools/M3UToolsJPA/config.properties
-fullM3U=/home/jonathan/videoDownloader/allChannels.m3u
+fileName=./config.properties
+fullM3U=./allChannels.m3u
 moviedb.searchPersonURL=https\://api.themoviedb.org/3/search/person
 epg.filename=./M3UToolsJPA.xml
 xteve.url=http\://localhost\:34400/api/
