--- a/M3UToolsJPA/src/main/resources/application.properties
+++ b/M3UToolsJPA/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.file.name=M3UToolsJPA.log
+logging.file.name.name.name.name=M3UToolsJPA.log
 # spring.datasource.url=jdbc:h2:file:/home/jonathan/
 spring.datasource.url=jdbc:h2:file:./m3uTools
 spring.datasource.driverClassName=org.h2.Driver
@@ -7,7 +7,6 @@ spring.datasource.password=password
 spring.devtools.livereload.enabled=true
 spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.use-new-id-generator-mappings=false 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=false
