--- a/M3UToolsJPA/pom.xml
+++ b/M3UToolsJPA/pom.xml
@@ -147,11 +147,10 @@
 			<artifactId>jackson-dataformat-xml</artifactId>
 		</dependency>
 		<dependency>
-	<groupId>org.springframework.boot</groupId>
-	<artifactId>spring-boot-properties-migrator</artifactId>
-	<scope>runtime</scope>
-</dependency>
-	</dependencies>
+		  <groupId>org.slf4j</groupId>
+		  <artifactId>slf4j-api</artifactId>  
+		  </dependency>
+</dependencies>
 	<build>
 		<plugins>
 			<plugin>
