--- a/M3UToolsJPA/src/main/resources/application.properties
+++ b/M3UToolsJPA/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.file.name.name.name.name=M3UToolsJPA.log
+logging.file.name=M3UToolsJPA.log
 # spring.datasource.url=jdbc:h2:file:/home/jonathan/
 spring.datasource.url=jdbc:h2:file:./m3uTools
 spring.datasource.driverClassName=org.h2.Driver
