--- a/M3UToolsJPA/config.properties
+++ b/M3UToolsJPA/config.properties
@@ -1,5 +1,5 @@
 #
-#Thu Feb 23 14:14:23 GMT 2023
+#Thu Mar 23 14:48:15 GMT 2023
 fileWatcher.location=/home/jonathan/.xteve/data
 stream.channels=http\://line.mytv-ultra.com/get.php?username\=9CD702&password\=22C122&type\=m3u_plus&output\=mpegts
 fileName=./config.properties
@@ -10,13 +10,12 @@ xteve.url=http\://localhost\:34400/api/
 xteve.installed=true
 emby.api=01f9cd6d610c499a82e5bc4a48401eec
 moviedb.apikey=56744a89f97f5119fe2a2306794d29a3
-channels=http\://line.mytv-ultra.com/get.php?username\=9CD702&password\=22C122&type\=m3u_plus&output\=mpegts
 downloadPath=./
 epg.time.difference=+0100
 moviedb.discoverURL=https\://api.themoviedb.org/3/discover/movie
 emby.url=http\://192.168.0.110\:8096/emby/
 moviedb.searchURL=https\://api.themoviedb.org/3/search/movie
-emby.installed=true
+emby.installed=false
 filewatcher.pollingDuration=10000
 xteve.user=duckulaj
 moviedb.searchMovieURL=https\://api.themoviedb.org/3/movie
