--- a/M3UToolsJPA/.gitignore
+++ b/M3UToolsJPA/.gitignore
@@ -8,3 +8,6 @@
 /M3UToolsJPA.log.2023-01-20.0.gz
 /config.properties.bu
 /m3uTools.trace.db
+/M3UToolsJPA.log.2023-06-28.0.gz
+/M3UToolsJPA.m3u
+/channels.m3u
