--- a/M3UToolsJPA/src/main/resources/application.properties
+++ b/M3UToolsJPA/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.devtools.livereload.enabled=true
 spring.h2.console.enabled=false
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=false
@@ -23,3 +23,10 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.auto-commit=true
 
 server.port=8080
+server.ssl.enabled=false
+#server.port: 8443
+server.ssl.key-store: classpath:keystore/shazjon.hopto.org.pfx
+server.ssl.key-store-password: ja9juja9ju
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: 1
+
