--- a/M3UToolsJPA/src/main/resources/application.properties
+++ b/M3UToolsJPA/src/main/resources/application.properties
@@ -20,9 +20,9 @@ spring.datasource.hikari.maximum-pool-size=1000
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.auto-commit=true
 
-server.port=8080
-server.ssl.enabled=false
-# server.port: 8443
+# server.port=8080
+server.ssl.enabled=true
+server.port: 8443
 server.ssl.key-store: classpath:keystore/shazjon.hopto.org.pfx
 server.ssl.key-store-password: ja9juja9ju
 server.ssl.keyStoreType: PKCS12
