--- a/M3UToolsJPA/src/main/resources/application.properties
+++ b/M3UToolsJPA/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.datasource.hikari.maximum-pool-size=1000
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.auto-commit=true
 
+server.tomcat.protocol-header=x-forwarded-proto
 # server.port=8080
 server.ssl.enabled=true
 server.port: 8443
