Updates to streaming

--- a/M3UToolsJPA/src/main/resources/application.properties
+++ b/M3UToolsJPA/src/main/resources/application.properties
@@ -28,3 +28,5 @@ server.ssl.key-store-password: ja9juja9ju
 server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: 1
 
+management.endpoints.web.exposure.include=*
+
