--- a/M3UToolsJPA/.project
+++ b/M3UToolsJPA/.project
@@ -40,5 +40,6 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 		<nature>org.thymeleaf.extras.eclipse.contentassist.ThymeleafNature</nature>
+		<nature>org.jkiss.dbeaver.DBeaverNature</nature>
 	</natures>
 </projectDescription>
