--- a/M3UToolsJPA/pom.xml
+++ b/M3UToolsJPA/pom.xml
@@ -166,6 +166,10 @@
 			<artifactId>google-api-client</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		<dependency>
+    		<groupId>io.dropwizard.metrics</groupId>
+    		<artifactId>metrics-core</artifactId>
+    	</dependency>
 	</dependencies>
 	<build>
 		<plugins>
