--- a/M3UToolsJPA/pom.xml
+++ b/M3UToolsJPA/pom.xml
@@ -171,6 +171,12 @@
     		<artifactId>metrics-core</artifactId>
     		<version>4.2.25</version>
     	</dependency>
+    	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+		<dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-api</artifactId>
+		    
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
