--- a/M3UToolsJPA/src/main/resources/application.properties
+++ b/M3UToolsJPA/src/main/resources/application.properties
@@ -23,8 +23,10 @@ spring.datasource.hikari.auto-commit=true
 # server.port=8080
 server.ssl.enabled=true
 server.port: 8443
-server.ssl.key-store: classpath:keystore/shazjon.hopto.org.pfx
-server.ssl.key-store-password: ja9juja9ju
+#server.ssl.key-store: classpath:keystore/shazjon.hopto.org.pfx
+#server.ssl.key-store-password: ja9juja9ju
+server.ssl.key-store: file:/home/jonathan/Keystore/EmbyCert.pfx
+server.ssl.key-store-password: Hawki607103#
 server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: 1
 
