--- a/M3UToolsJPA/pom.xml
+++ b/M3UToolsJPA/pom.xml
@@ -181,10 +181,15 @@
 		    <artifactId>lombok</artifactId>
 		    <scope>provided</scope>
 		</dependency>
+<!--		<dependency>-->
+<!--		    <groupId>com.h2database</groupId>-->
+<!--		    <artifactId>h2</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
-		    <groupId>com.h2database</groupId>
-		    <artifactId>h2</artifactId>
-		</dependency>
+        	<groupId>mysql</groupId>
+        	<artifactId>mysql-connector-java</artifactId>
+        	<version>8.0.33</version>
+    	</dependency>
     </dependencies>
     <build>
         <plugins>
