--- a/M3UToolsJPA/pom.xml
+++ b/M3UToolsJPA/pom.xml
@@ -25,7 +25,6 @@
         <jquery.version>3.7.1</jquery.version>
         <webjars-locator.version>0.52</webjars-locator.version>
         <font-awesome.version>6.5.2</font-awesome.version>
-        <mysql.version>8.0.33</mysql.version>
         <tests.skip>true</tests.skip>
     </properties>
     <dependencies>
@@ -187,9 +186,8 @@
 <!--		    <artifactId>h2</artifactId>-->
 <!--		</dependency>-->
 		<dependency>
-        	<groupId>mysql</groupId>
-        	<artifactId>mysql-connector-java</artifactId>
-        	<version>${mysql.version}</version>
+        	<groupId>com.mysql</groupId>
+        	<artifactId>mysql-connector-j</artifactId>
     	</dependency>
     </dependencies>
     <build>
