--- a/M3UToolsJPA/src/main/resources/application.properties
+++ b/M3UToolsJPA/src/main/resources/application.properties
@@ -1,24 +1,40 @@
 logging.file.name=M3UToolsJPA.log
 # spring.datasource.url=jdbc:h2:file:/home/jonathan/
-spring.datasource.url=jdbc:h2:file:./m3uTools
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+# spring.datasource.url=jdbc:h2:file:./m3uTools
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=password
 spring.devtools.livereload.enabled=true
-spring.h2.console.enabled=false
-spring.jpa.hibernate.ddl-auto=update
+# spring.h2.console.enabled=false
+# spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.show-sql=false
+# spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.batch_size=1000
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.generate_statistics=false
 spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.minimum-idle=1000
-spring.datasource.hikari.maximum-pool-size=1000
-spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.max-lifetime=2000000
 spring.datasource.hikari.auto-commit=true
+
+# DataSource Configuration
+# Development
+# spring.datasource.url=jdbc:mysql://localhost:3306/M3UTOOLSJPA_DEV?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+# Production
+spring.datasource.url=jdbc:mysql://localhost:3306/M3UTOOLSJPA?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=jonathan
+spring.datasource.password=ja9juja9ju
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA Configuration
+# spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
 
 # server.port=8080
 server.ssl.enabled=true
@@ -29,4 +45,3 @@ server.ssl.key-store: file:/home/jonathan/Keystore/EmbyCert.pfx
 server.ssl.key-store-password: Hawki607103#
 server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: 1
-
