--- a/M3UToolsJPA/pom.xml
+++ b/M3UToolsJPA/pom.xml
@@ -15,7 +15,7 @@
     <name>M3uJpa</name>
     <description>M3U Handler with JPA</description>
     <properties>
-        <java.version>21</java.version>
+        <java.version>23</java.version>
         <jakarta-servlet.version>6.1.0</jakarta-servlet.version>
         <commons-collections4.version>4.5.0-M2</commons-collections4.version>
         <commons-io.version>2.17.0</commons-io.version>
@@ -25,6 +25,8 @@
         <jquery.version>3.7.1</jquery.version>
         <webjars-locator.version>0.52</webjars-locator.version>
         <font-awesome.version>6.5.2</font-awesome.version>
+        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+		<maven.compiler.proc>full</maven.compiler.proc>
         <tests.skip>true</tests.skip>
     </properties>
     <dependencies>
@@ -204,6 +206,14 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 </project>
