Parameterised Schedule config cron

--- a/M3UToolsJPA/src/main/resources/application.properties
+++ b/M3UToolsJPA/src/main/resources/application.properties
@@ -45,3 +45,5 @@ server.ssl.key-store: file:/home/jonathan/Keystore/EmbyCert.pfx
 server.ssl.key-store-password: Hawki607103#
 server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: 1
+
+task.schedule.cron=0 0 2 * * ?
