--- a/M3UToolsJPA/pom.xml
+++ b/M3UToolsJPA/pom.xml
@@ -191,6 +191,13 @@
         	<groupId>com.mysql</groupId>
         	<artifactId>mysql-connector-j</artifactId>
     	</dependency>
+    	
+		<dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-engine</artifactId>
+		    <scope>test</scope>
+		</dependency>
+
     </dependencies>
     <build>
         <plugins>
