--- a/M3UToolsJPA/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/M3UToolsJPA/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -13,5 +13,10 @@
     "name": "security.require-ssl",
     "type": "java.lang.String",
     "description": "A description for 'security.require-ssl'"
+  },
+  {
+    "name": "task.schedule.cron",
+    "type": "java.lang.String",
+    "description": "cron value to run scheduled tasks'"
   }
 ]}
