--- a/M3UToolsJPA/src/main/resources/application.properties
+++ b/M3UToolsJPA/src/main/resources/application.properties
@@ -42,7 +42,7 @@ server.port: 8443
 #server.ssl.key-store: classpath:keystore/shazjon.hopto.org.pfx
 #server.ssl.key-store-password: ja9juja9ju
 server.ssl.key-store: file:/home/jonathan/Keystore/shazjon.hopto.org.pfx
-server.ssl.key-store-password: Hawki607103#
+server.ssl.key-store-password=${SSL_KEYSTORE_PASSWORD}
 server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: 1
 
