--- a/M3UToolsJPA/src/main/resources/application.properties
+++ b/M3UToolsJPA/src/main/resources/application.properties
@@ -49,3 +49,13 @@ server.ssl.keyAlias: 1
 task.schedule.cron=0 0 2 * * ?
 
 aspect.enabled:true
+
+spring.web.resources.add-mappings=true
+spring.web.resources.chain.enabled=true
+spring.web.resources.chain.strategy.content.enabled=true
+spring.web.resources.chain.strategy.content.paths=/**
+spring.web.resources.chain.strategy.fixed.enabled=true
+spring.web.resources.chain.strategy.fixed.paths=/**
+spring.web.resources.chain.strategy.fixed.version=1.0
+spring.web.resources.chain.strategy.fixed.version-parameter-name=v
+
