--- a/M3UToolsJPA/pom.xml
+++ b/M3UToolsJPA/pom.xml
@@ -24,7 +24,7 @@
 		<bootstrap.version>5.3.3</bootstrap.version>
 		<jquery.version>3.7.1</jquery.version>
 		<webjars-locator.version>0.52</webjars-locator.version>
-		<font-awesome.version>6.5.2</font-awesome.version>
+		<webjars-htmx.version>2.0.4</webjars-htmx.version>
 		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
 		<maven.compiler.proc>full</maven.compiler.proc>
 		<tests.skip>true</tests.skip>
@@ -136,13 +136,13 @@
 			<artifactId>webjars-locator</artifactId>
 			<version>${webjars-locator.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>font-awesome</artifactId>
-			<version>${font-awesome.version}</version>
-		</dependency>
-
+				
 		<!-- Other Dependencies -->
+		<dependency><!-- https://mvnrepository.com/artifact/org.webjars.npm/htmx.org -->
+		    <groupId>org.webjars.npm</groupId>
+		    <artifactId>htmx.org</artifactId>
+		    <version>${webjars-htmx.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.dom4j</groupId>
 			<artifactId>dom4j</artifactId>
