--- a/M3UToolsJPA/pom.xml
+++ b/M3UToolsJPA/pom.xml
@@ -183,14 +183,14 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		<!--		<dependency>-->
-		<!--		    <groupId>com.h2database</groupId>-->
-		<!--		    <artifactId>h2</artifactId>-->
-		<!--		</dependency>-->
-		<dependency>
+				<dependency>
+				    <groupId>com.h2database</groupId>
+				    <artifactId>h2</artifactId>
+				</dependency>
+		<!--<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-		</dependency>
+		</dependency>-->
 
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
