--- a/M3UToolsJPA/src/main/resources/application.properties
+++ b/M3UToolsJPA/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 logging.file.name=M3UToolsJPA.log
 # spring.datasource.url=jdbc:h2:file:/home/jonathan/
-# spring.datasource.url=jdbc:h2:file:./m3uTools
-# spring.datasource.driverClassName=org.h2.Driver
-# spring.datasource.username=sa
-# spring.datasource.password=password
+spring.datasource.url=jdbc:h2:file:./m3uTools
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
 spring.devtools.livereload.enabled=true
-# spring.h2.console.enabled=false
-# spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=false
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
-# spring.jpa.show-sql=false
-# spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.batch_size=1000
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
@@ -24,16 +24,16 @@ spring.datasource.hikari.auto-commit=true
 # Development
 # spring.datasource.url=jdbc:mysql://localhost:3306/M3UTOOLSJPA_DEV?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 # Production
-spring.datasource.url=jdbc:mysql://localhost:3306/M3UTOOLSJPA?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=jonathan
-spring.datasource.password=ja9juja9ju
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://localhost:3306/M3UTOOLSJPA?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+# spring.datasource.username=jonathan
+# spring.datasource.password=ja9juja9ju
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
 # spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=false
+# spring.jpa.properties.hibernate.format_sql=true
 
 
 # server.port=8080
@@ -42,7 +42,8 @@ server.port: 8443
 #server.ssl.key-store: classpath:keystore/shazjon.hopto.org.pfx
 #server.ssl.key-store-password: ja9juja9ju
 server.ssl.key-store: file:/home/jonathan/Keystore/shazjon.hopto.org.pfx
-server.ssl.key-store-password=${SSL_KEYSTORE_PASSWORD}
+# server.ssl.key-store-password=${SSL_KEYSTORE_PASSWORD}
+server.ssl.key-store-password=Hawki607103#
 server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: 1
 
