--- a/M3UToolsJPA/src/main/resources/application.properties
+++ b/M3UToolsJPA/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.devtools.livereload.enabled=true
-spring.h2.console.enabled=false
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=false
