--- a/M3UToolsJPA/pom.xml
+++ b/M3UToolsJPA/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.5</version>
+		<version>3.5.0</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.hawkins</groupId>
@@ -17,15 +17,16 @@
 	<properties>
 		<java.version>23</java.version>
 		<jakarta-servlet.version>6.1.0</jakarta-servlet.version>
-		<commons-collections4.version>4.5.0-M2</commons-collections4.version>
-		<commons-io.version>2.17.0</commons-io.version>
-		<google-api-client.version>2.7.0</google-api-client.version>
+		<commons-collections4.version>4.5.0</commons-collections4.version>
+		<commons-io.version>2.19.0</commons-io.version>
+		<google-api-client.version>2.7.2</google-api-client.version>
 		<metrics-core.version>4.2.28</metrics-core.version>
 		<bootstrap.version>5.3.3</bootstrap.version>
 		<jquery.version>3.7.1</jquery.version>
 		<webjars-locator.version>0.52</webjars-locator.version>
 		<webjars-htmx.version>2.0.4</webjars-htmx.version>
 		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+		<dom4j.version>2.1.4</dom4j.version>
 		<maven.compiler.proc>full</maven.compiler.proc>
 		<tests.skip>true</tests.skip>
 	</properties>
@@ -146,7 +147,7 @@
 		<dependency>
 			<groupId>org.dom4j</groupId>
 			<artifactId>dom4j</artifactId>
-			<version>2.1.4</version>
+			<version>${dom4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
