Added Redis and handle M3U download failure

--- a/M3UToolsJPA/src/main/resources/application.properties
+++ b/M3UToolsJPA/src/main/resources/application.properties
@@ -61,3 +61,6 @@ spring.web.resources.chain.strategy.fixed.paths=/**
 spring.web.resources.chain.strategy.fixed.version=1.0
 spring.web.resources.chain.strategy.fixed.version-parameter-name=v
 
+# Redis configuration for local development
+spring.redis.host=localhost
+spring.redis.port=6379
