--- a/M3UToolsJPA/pom.xml
+++ b/M3UToolsJPA/pom.xml
@@ -15,7 +15,7 @@
 	<name>M3uJpa</name>
 	<description>M3U Handler with JPA</description>
 	<properties>
-		<java.version>23</java.version>
+		<java.version>21</java.version>
 		<jakarta-servlet.version>6.1.0</jakarta-servlet.version>
 		<commons-collections4.version>4.5.0</commons-collections4.version>
 		<commons-io.version>2.19.0</commons-io.version>
@@ -213,6 +213,14 @@
 			<groupId>io.astefanutti.metrics.aspectj</groupId>
 			<artifactId>metrics-aspectj-deps</artifactId>
 			<version>1.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
